--- a/back/src/main/resources/application.yml
+++ b/back/src/main/resources/application.yml
@@ -36,6 +36,8 @@ logging:
     org.springframework.transaction.interceptor: TRACE
 
 
+springdoc:
+  default-produces-media-type: application/json;charset=UTF-8
 
 
 custom:
